# discounts-api-rs

./: .gitignore  Cargo.toml  README.md  TABLES.md
api/: .env  Cargo.toml  diesel.toml
api/migrations/discounts-api-rs/: up.sql
api/src/: config.rs  error.rs  handler.rs  main.rs
client/: Cargo.toml
client/src/: error.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs  schema.rs
