[package]
name = "discounts-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
discounts-common = {path="../common", features=["server"]}
# configuration file
get_pass = {git = "https://github.com/Cyrix126/get_pass", features=["combine_with_url"]}
confy = "0.6"
serde = { version = "1", features = ["derive"] }
# Server
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "sync"] }
axum = {version="0.7", default-features= false, features= ["tokio", "http2", "json", "macros"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error
thiserror = "1.0"
axum_thiserror = "0.1"
anyhow = "1.0"
# response, either json (slower, more compatible) or bitcode (faster, rust client)
# bitcode = {version="0.6", features=["serde"]}
url = {version="2.5", features=["serde"]}
# Miscs
cfg-if ="1.0"

# DB
diesel = { version = "2.2", features = ["postgres", "chrono"] }
diesel_migrations = {version="2.2", features=["postgres"]}
deadpool-diesel = {version="0.6", features=["postgres"]}
chrono = {version="0.4", features=["serde"]}

[features]
default=[]
