[package]
name = "discounts-client"
version = "0.1.0"
edition = "2021"

[dependencies]
discounts-common = {path="../common"}
reqwest = {version="0.12", default-features= false, features=["json"]}
derive_more = {version="1.0", default-features=false, features=["deref"]}
thiserror = "1.0"
chrono = {version="0.4", features=["serde"]}
