[package]
name = "discounts-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1", features = ["derive"]}
chrono = {version="0.4", features=["serde", "now"]}
diesel = { version = "2.2", features = ["postgres", "chrono"], optional=true}
cfg-if = "1.0"
[features]
default=["server"]
server=["dep:diesel"]
